--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,82 +8,72 @@
     tools:context="net.kiriti.peelabus.ChangePassword"
     tools:showIn="@layout/activity_change_password"
     tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:layout_editor_absoluteX="0dp"
+    android:background="@drawable/changepassword_bg">
 
-    <EditText
-        android:id="@+id/newpass"
-        android:layout_width="233dp"
-        android:layout_height="66dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Enter New Password"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/confirmnew"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/current"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="25dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
+        android:background="@drawable/loginlayout"
+        android:layout_centerInParent="true">
 
-    <EditText
-        android:id="@+id/confirmnew"
-        android:layout_width="231dp"
-        android:layout_height="64dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Confirm New Password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="223dp" />
+        <EditText
+            android:id="@+id/user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Enter email"
+            android:layout_margin="20dp"
+            style="@style/formlabelchange"
+            />
 
-    <EditText
-        android:id="@+id/current"
-        android:layout_width="0dp"
-        android:layout_height="57dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Enter Current Password"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/user"
-        android:layout_marginTop="21dp"
-        app:layout_constraintTop_toBottomOf="@+id/user"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/user" />
+        <EditText
+            android:id="@+id/current"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Enter Current Password"
+            style="@style/formlabelchange"/>
 
-    <EditText
-        android:id="@+id/user"
-        android:layout_width="234dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Enter email"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="26dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <EditText
+            android:id="@+id/newpass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Enter New Password"
+            android:layout_margin="20dp"
+            style="@style/formlabelchange"/>
+
+        <EditText
+            android:id="@+id/confirmnew"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Confirm New Password"
+            android:paddingBottom="20dp"
+            style="@style/formlabelchange"
+            android:layout_gravity="left"/>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/confirm"
-        android:layout_width="189dp"
-        android:layout_height="55dp"
+        android:layout_width="303dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="127dp"
+        android:background="@drawable/round"
         android:text="Button"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="46dp"
-        app:layout_constraintTop_toBottomOf="@+id/confirmnew"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
