--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,33 +8,37 @@
     tools:context="net.kiriti.peelabus.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/main_bg_header"
+        android:scaleType="fitXY" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/main_bg_header"
         android:id="@+id/linearLayout2"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true">
 
         <ImageView
             android:id="@+id/imageparent"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/parents_icon" />
+            app:srcCompat="@drawable/parents_icon"
+            />
 
         <TextView
             android:id="@+id/parentname"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="MARKUS schulz"
-            android:textAlignment="center"
+            android:layout_gravity="center"
             android:textAllCaps="true"
             android:layout_marginTop="4dp"
             style="@style/parentname"/>
@@ -54,14 +58,17 @@
 
     </LinearLayout>
 
+
+
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:columnCount="2"
         android:rowCount="3"
-        android:layout_marginTop="-60dp"
-        android:padding="40dp"
-        android:layout_below="@+id/linearLayout2">
+        android:layout_marginTop="-20dp"
+        android:padding="20dp"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_centerHorizontal="true">
 
     <ImageButton
         android:id="@+id/track1"
