commit before changing tracking to post

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -15,65 +15,136 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerHorizontal="true"
+        android:paddingBottom="20dp"
         android:layout_margin="20dp"
         android:background="@drawable/loginlayout"
         android:layout_centerInParent="true">
 
-        <EditText
-            android:id="@+id/user"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Enter email"
-            android:layout_margin="20dp"
-            style="@style/formlabelchange"
-            />
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+            android:layout_weight="0.09">
 
-        <EditText
-            android:id="@+id/current"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Enter Current Password"
-            style="@style/formlabelchange"/>
+            <EditText
+                android:id="@+id/user"
+                style="@style/formlabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Email"
+                android:inputType="textEmailAddress" />
 
-        <EditText
-            android:id="@+id/newpass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Enter New Password"
-            android:layout_margin="20dp"
-            style="@style/formlabelchange"/>
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/confirmnew"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Confirm New Password"
-            android:paddingBottom="20dp"
-            style="@style/formlabelchange"
-            android:layout_gravity="left"/>
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+            android:layout_weight="0.09">
+
+            <EditText
+                android:id="@+id/current"
+                style="@style/formlabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Current Password"
+                android:inputType="textEmailAddress" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout5"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+            android:layout_weight="0.09">
+
+            <EditText
+                android:id="@+id/newpass"
+                style="@style/formlabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="New Password"
+                android:inputType="textEmailAddress" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout6"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+
+            android:layout_weight="0.09">
+
+            <EditText
+                android:id="@+id/confirmnew"
+                style="@style/formlabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Confirm New Password"
+                android:inputType="textEmailAddress" />
+
+        </android.support.design.widget.TextInputLayout>
+        <!--<EditText-->
+            <!--android:id="@+id/current"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="20dp"-->
+            <!--android:ems="10"-->
+            <!--android:inputType="textPersonName"-->
+            <!--android:hint="Enter Current Password"-->
+            <!--style="@style/formlabelchange"/>-->
+
+        <!--<EditText-->
+            <!--android:id="@+id/newpass"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:ems="10"-->
+            <!--android:inputType="textPersonName"-->
+            <!--android:hint="Enter New Password"-->
+            <!--android:layout_margin="20dp"-->
+            <!--style="@style/formlabelchange"/>-->
+
+        <!--<EditText-->
+            <!--android:id="@+id/confirmnew"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="20dp"-->
+            <!--android:ems="10"-->
+            <!--android:inputType="textPersonName"-->
+            <!--android:hint="Confirm New Password"-->
+            <!--android:paddingBottom="20dp"-->
+            <!--style="@style/formlabelchange"-->
+            <!--android:layout_gravity="left"/>-->
 
     </LinearLayout>
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/confirm"
-        android:layout_width="303dp"
+        style="@style/loginbutton"
+        android:layout_width="222dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="127dp"
+        android:layout_marginBottom="144dp"
         android:background="@drawable/round"
-        android:text="Button"
+        android:padding="2dp"
+        android:text="Login"
+        android:textColor="@color/white"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <!--<Button-->
+        <!--android:id="@+id/confirm"-->
+        <!--android:layout_width="303dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginBottom="127dp"-->
+        <!--android:background="@drawable/round"-->
+        <!--android:text="Button"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
 </RelativeLayout>
 
