--- a/app/src/main/res/layout/activity_track.xml
+++ b/app/src/main/res/layout/activity_track.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     tools:context="net.kiriti.peelabus.Track">
 
-    <!--<fragment-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:name=" "-->
-        <!--android:id="@+id/mapFragment" />-->
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:id="@+id/mapFragment" />
 
     <LinearLayout
         android:layout_width="match_parent"
