--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -59,176 +59,185 @@
     </LinearLayout>
 
 
-
-    <GridLayout
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:rowCount="3"
-        android:layout_marginTop="-20dp"
-        android:padding="20dp"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_centerHorizontal="true">
-
-    <ImageButton
-        android:id="@+id/track1"
-        android:layout_width="135dp"
-        android:layout_height="109dp"
-        app:srcCompat="@drawable/menu_track_bus"
-        android:layout_column="0"
-        android:layout_row="0"
-        style="@style/mainbutton"
-        android:background="@drawable/mainbutton" />
-
-    <TextView
-        android:id="@+id/track"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:layout_column="0"
-        android:layout_row="0"
-        style="@style/mainbuttontext"
-        android:text="Track My Bus"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:paddingTop="10dp"
-        />
+        android:columnWidth="90dp"
+        android:numColumns="2"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:layout_margin="20dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        android:layout_below="@+id/imageView4"
+        android:listSelector="@color/colorText"/>
 
 
+    <!--<GridLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:columnCount="2"-->
+        <!--android:rowCount="3"-->
+        <!--android:padding="20dp"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_below="@+id/imageView4"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:id="@+id/gridLayout">-->
 
-    <ImageButton
-        android:id="@+id/alerts1"
-        android:layout_width="135dp"
-        android:layout_height="109dp"
-        app:srcCompat="@drawable/menu_alerts"
-        style="@style/mainbutton"
-        android:layout_column="1"
-        android:layout_row="0"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp"
-        android:background="@drawable/mainbutton"
-         />
+        <!--<Button-->
+            <!--android:id="@+id/button2"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Button"-->
+            <!--android:layout_gravity="center"-->
+            <!--style="@style/mainbutton"-->
+            <!--android:background="@drawable/menu_track_bus"-->
+            <!--/>-->
 
-    <TextView
-        android:id="@+id/alerts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        style="@style/mainbuttontext"
-        android:text="Alerts"
-        android:layout_column="1"
-        android:layout_row="0"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:paddingTop="20dp"
-        android:paddingLeft="10dp"/>
+    <!--<ImageButton-->
+        <!--android:id="@+id/track1"-->
+        <!--android:layout_width="168dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:srcCompat="@drawable/menu_track_bus"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_row="0"-->
+        <!--android:layout_gravity="fill"-->
+        <!--android:layout_rowWeight="1"-->
+        <!--android:padding="60dp"-->
+        <!--style="@style/mainbutton"-->
+        <!--android:background="@drawable/mainbutton" />-->
 
-    <ImageButton
-        android:id="@+id/profile1"
-        android:layout_width="135dp"
-        android:layout_height="109dp"
-        android:layout_column="0"
-        android:layout_row="1"
-        app:srcCompat="@drawable/menu_profiles"
-        style="@style/mainbutton"
-        android:background="@drawable/mainbutton"
-        android:layout_marginTop="20dp"/>
+    <!--<TextView-->
+        <!--android:id="@+id/track"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAllCaps="true"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_row="0"-->
+        <!--style="@style/mainbuttontext"-->
+        <!--android:text="Track My Bus"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginTop="40dp"-->
+        <!--/>-->
 
-    <TextView
-        android:id="@+id/profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        style="@style/mainbuttontext"
-        android:text="Profiles"
-        android:layout_column="0"
-        android:layout_row="1"
-        android:layout_gravity="center"
-        android:paddingTop="20dp"
-        android:layout_marginTop="30dp"/>
 
-    <ImageButton
-        android:id="@+id/share1"
-        android:layout_width="135dp"
-        android:layout_height="109dp"
-        app:srcCompat="@drawable/menu_shareit"
-        style="@style/mainbutton"
-        android:background="@drawable/mainbutton"
-        android:layout_column="1"
-        android:layout_row="1"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp" />
 
-    <TextView
-        android:id="@+id/share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        style="@style/mainbuttontext"
-        android:text="Shareit"
-        android:layout_column="1"
-        android:layout_row="1"
-        android:layout_gravity="center"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:paddingTop="30dp"/>
+    <!--<ImageButton-->
+        <!--android:id="@+id/alerts1"-->
+        <!--android:layout_width="131dp"-->
+        <!--android:layout_height="107dp"-->
+        <!--app:srcCompat="@drawable/menu_alerts"-->
+        <!--style="@style/mainbutton"-->
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="0"-->
+        <!--android:layout_rowWeight="1"-->
+        <!---->
+        <!--android:background="@drawable/mainbutton"-->
+         <!--/>-->
 
-    <ImageButton
-        android:id="@+id/help1"
-        android:layout_width="135dp"
-        android:layout_height="109dp"
-        app:srcCompat="@drawable/menu_help_feedback"
-        style="@style/mainbutton"
-        android:background="@drawable/mainbutton"
-        android:layout_column="0"
-        android:layout_row="2"
-        android:layout_marginTop="20dp"
-        android:paddingTop="10dp"/>
+    <!--<TextView-->
+        <!--android:id="@+id/alerts"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAlignment="center"-->
+        <!--android:textAllCaps="true"-->
+        <!--style="@style/mainbuttontext"-->
+        <!--android:text="Alerts"-->
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="0"-->
+        <!--android:layout_gravity="center"/>-->
 
-    <TextView
-        android:id="@+id/help"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        style="@style/mainbuttontext"
-        android:text="help &amp; Feedback"
-        android:layout_column="0"
-        android:layout_row="2"
-        android:layout_gravity="center"
-        />
+    <!--<ImageButton-->
+        <!--android:id="@+id/profile1"-->
+        <!--android:layout_width="135dp"-->
+        <!--android:layout_height="109dp"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_row="1"-->
+        <!--app:srcCompat="@drawable/menu_profiles"-->
+        <!--style="@style/mainbutton"-->
+        <!--android:background="@drawable/mainbutton"/>-->
 
-    <ImageButton
-        android:id="@+id/logout1"
-        android:layout_width="135dp"
-        android:layout_height="109dp"
-        android:layout_column="1"
-        android:layout_row="2"
-        app:srcCompat="@drawable/menu_logout"
-        style="@style/mainbutton"
-        android:background="@drawable/mainbutton"
-        android:layout_marginTop="20dp"
-        android:paddingTop="10dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp"/>
+    <!--<TextView-->
+        <!--android:id="@+id/profile"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAllCaps="true"-->
+        <!--style="@style/mainbuttontext"-->
+        <!--android:text="Profiles"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_row="1"-->
+        <!--android:layout_gravity="center"/>-->
 
-    <TextView
-        android:id="@+id/logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        style="@style/mainbuttontext"
-        android:layout_column="1"
-        android:layout_row="2"
-        android:text="Logout"
-        android:layout_gravity="center"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"/>
+    <!--<ImageButton-->
+        <!--android:id="@+id/share1"-->
+        <!--android:layout_width="135dp"-->
+        <!--android:layout_height="109dp"-->
+        <!--app:srcCompat="@drawable/menu_shareit"-->
+        <!--style="@style/mainbutton"-->
+        <!--android:background="@drawable/mainbutton"-->
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="1" />-->
 
-    </GridLayout>
+    <!--<TextView-->
+        <!--android:id="@+id/share"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAlignment="center"-->
+        <!--android:textAllCaps="true"-->
+        <!--style="@style/mainbuttontext"-->
+        <!--android:text="Shareit"-->
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="1"-->
+        <!--android:layout_gravity="center"/>-->
+
+    <!--<ImageButton-->
+        <!--android:id="@+id/help1"-->
+        <!--android:layout_width="135dp"-->
+        <!--android:layout_height="109dp"-->
+        <!--app:srcCompat="@drawable/menu_help_feedback"-->
+        <!--style="@style/mainbutton"-->
+        <!--android:background="@drawable/mainbutton"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_row="2"/>-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/help"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAlignment="center"-->
+        <!--android:textAllCaps="true"-->
+        <!--style="@style/mainbuttontext"-->
+        <!--android:text="help &amp; Feedback"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_row="2"-->
+        <!--android:layout_gravity="center"-->
+        <!--/>-->
+
+    <!--<ImageButton-->
+        <!--android:id="@+id/logout1"-->
+        <!--android:layout_width="135dp"-->
+        <!--android:layout_height="109dp"-->
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="2"-->
+        <!--app:srcCompat="@drawable/menu_logout"-->
+        <!--style="@style/mainbutton"-->
+        <!--android:background="@drawable/mainbutton"/>-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/logout"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAllCaps="true"-->
+        <!--style="@style/mainbuttontext"-->
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="2"-->
+        <!--android:text="Logout"-->
+        <!--android:layout_gravity="center"/>-->
+
+
+    <!--</GridLayout>-->
+
 
 </RelativeLayout>
