--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,10 +21,11 @@
         android:paddingTop="30dp"/>
 
     <TextView
+        android:id="@+id/drawer_parentName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Markus Schulz"
+        android:text=" "
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textAllCaps="true"
         android:gravity="center"/>
